--- a/RFID_DOOR_APP/RFID_DOOR_APP/Properties/Resources.resx
+++ b/RFID_DOOR_APP/RFID_DOOR_APP/Properties/Resources.resx
@@ -160,4 +160,31 @@
   <data name="header_REPORT_A" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\pics\header_REPORT_A.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ADD_BTN" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\pics\ADD_BTN.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ADD_BTN_HOVER" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\pics\ADD_BTN_HOVER.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DELETE_BTN" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\pics\DELETE_BTN.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DELETE_BTN_HOVER" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\pics\DELETE_BTN_HOVER.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="FIX_BTN" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\pics\FIX_BTN.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="FIX_BTN_HOVER" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\pics\FIX_BTN_HOVER.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="header_EMPLOYEE" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\pics\header_EMPLOYEE.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="VIEW_BTN" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\pics\VIEW_BTN.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="VIEW_BTN_HOVER" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\pics\VIEW_BTN_HOVER.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
