--- a/RFID_DOOR_APP/RFID_DOOR_APP/Properties/Resources.resx
+++ b/RFID_DOOR_APP/RFID_DOOR_APP/Properties/Resources.resx
@@ -187,4 +187,7 @@
   <data name="VIEW_BTN_HOVER" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\pics\VIEW_BTN_HOVER.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="simple_green_background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\simple-green-background.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
