--- a/RFID_DOOR_APP/RFID_DOOR_APP/Properties/Resources.resx
+++ b/RFID_DOOR_APP/RFID_DOOR_APP/Properties/Resources.resx
@@ -271,4 +271,7 @@
   <data name="garbage_delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\pics\garbage_delete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Update_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\update_btn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
