--- a/RFID_DOOR_APP/RFID_DOOR_APP/Properties/Resources.resx
+++ b/RFID_DOOR_APP/RFID_DOOR_APP/Properties/Resources.resx
@@ -280,4 +280,10 @@
   <data name="Temperature_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Temperature_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Door_Close" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Door_Close.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Door_Open1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Door_Open.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
